@@ -1791,11 +1791,10 @@ class tslib_menu {
 			$this->sys_page->versionOL('tt_content', $row);
 
 			if ($GLOBALS['TSFE']->sys_language_contentOL && $basePageRow['_PAGES_OVERLAY_LANGUAGE']) {
-				$row = $this->sys_page->getRecordOverlay(
+				$row = $this->sys_page->getRecordOverlayWithFallback(
 					'tt_content',
 					$row,
-					$basePageRow['_PAGES_OVERLAY_LANGUAGE'],
-					$GLOBALS['TSFE']->sys_language_contentOL
+					$basePageRow['_PAGES_OVERLAY_LANGUAGE']
 				);
 			}
 
